# algorithm-defusal-game

./: .gitignore  README.md
backend/: main.py  pyproject.toml
game/: project.godot
game/autoload/: difficulty_manager.gd  difficulty_manager.gd.uid  game_state.gd  game_state.gd.uid  llm_service.gd  llm_service.gd.uid  wave_data.gd  wave_data.gd.uid
game/modules/: bit_cipher_module.tscn  code_breaker_module.tscn  frequency_lock_module.tscn  logic_gates_module.tscn  memory_matrix_module.tscn  pattern_sequence_module.tscn  priority_queue_module.tscn  signal_sorting_module.tscn  stack_overflow_module.tscn  wire_routing_module.tscn
game/scenes/: bomb_game.tscn  opening_briefing.tscn  result_screen.tscn  world_map.tscn
game/scripts/: base_module.gd  base_module.gd.uid  bit_cipher_module.gd  bit_cipher_module.gd.uid  bomb_game.gd  bomb_game.gd.uid  bomb_visual.gd  bomb_visual.gd.uid  briefing_overlay.gd  briefing_overlay.gd.uid  code_breaker_module.gd  code_breaker_module.gd.uid  frequency_lock_module.gd  frequency_lock_module.gd.uid  logic_gates_module.gd  logic_gates_module.gd.uid  main_menu.gd  main_menu.gd.uid  memory_matrix_module.gd  memory_matrix_module.gd.uid  opening_briefing.gd  opening_briefing.gd.uid  pattern_sequence_module.gd  pattern_sequence_module.gd.uid  priority_queue_module.gd  priority_queue_module.gd.uid  result_screen.gd  result_screen.gd.uid  screen_effects.gd  screen_effects.gd.uid  signal_sorting_module.gd  signal_sorting_module.gd.uid  stack_overflow_module.gd  stack_overflow_module.gd.uid  tech_background.gd  tech_background.gd.uid  (+4 more)
(+4 files in other folders)
