[project]
name = "bomb-defusal-backend"
version = "0.1.0"
description = "FastAPI backend for Bomb Defusal: Algorithm Mode LLM integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "openai>=1.60.0",
    "python-dotenv>=1.1.0",
]
